manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-service
  namespace: directory
spec:
  selector:
    app: weatherapp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
